tests/neg-custom-args/captures/contracap.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/contracap.scala:15:48 ------------------------------------
15 |  val g: (Ref[Int]^{a}, Ref[Int]^{a}) -> Unit = f // error
   |                                                ^
   |                                      Found:    (f : (Ref[Int]^, Ref[Int]^) -> Unit)
   |                                      Required: (Ref[Int]^{a}, Ref[Int]^{a}) -> Unit
   |
   |                                      where:    ^ refers to the universal root capability
   |
   |                                      Note that capability (a : Ref[Int]^) is not included in capture set {cap}.
   |
   | longer explanation available when compiling with `-explain`
